--- a/Simulations/real_dat_based_sim.Rnw
+++ b/Simulations/real_dat_based_sim.Rnw
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 \begin{document}
-\SweaveOpts{concordance=TRUE}
+\SweaveOpts{concordance=FALSE}
 
 <<results=tex, echo=FALSE,results=hide>>=
 
@@ -56,6 +56,9 @@ y<-y+1
 
 init_y<-y
 init_size_factors<-size_factors
+true_clusters<-NA        # TRUE clusters not known for real data
+
+
 source("Pan EM.R")
 
 
@@ -74,9 +77,9 @@ init_pi<-X_init$pi
 
 sim_coefs<-matrix(rep(rowSums(init_coefs)/k,times=k),ncol=k)
 
-fold_change<-1               # 50% nondiscriminatory, 50% discriminatory
+fold_change<-0.5               # 50% nondiscriminatory, 50% discriminatory
 nondisc_fold_change<-0.1
-tt<-g/2
+tt<-1                        # g must be even number (tt is # of discriminatory genes)
 sim_coefs[1:tt,]<-matrix(rep(c(-fold_change,fold_change),times=tt),nrow=tt,byrow=TRUE)+sim_coefs[1:tt,]
 sim_coefs[(tt+1):g,]<-matrix(rep(c(-nondisc_fold_change,nondisc_fold_change),times=(g-tt)),nrow=(g-tt),byrow=TRUE)+sim_coefs[(tt+1):g,]
 
@@ -126,7 +129,7 @@ for(ii in 1:sim){
   
   # Simulation order selection based on unpenalized EM #
   
-  K_search=c(2:8)
+  K_search=c(2:7)
   list_BIC=matrix(0,nrow=length(K_search),ncol=2)
   list_BIC[,1]=K_search
   
@@ -142,12 +145,17 @@ for(ii in 1:sim){
 
 @
 
-<<echo=FALSE,print=FALSE,results=tex>>=
+<<echo=FALSE>>=
+print(paste("# of discriminatory genes =",tt))
+print(paste("fold change for discriminatory genes:",fold_change))
+print(paste('fold change for nondiscriminatory genes:',nondisc_fold_change))
 table(choose_k)    # see how simulations chose each cluster
 max_k=as.numeric(which.max(table(choose_k))+1)
 @
 
 The optimal number of clusters K is set as the most frequently found K from the 100 simulations tabulated above. It is found by using the BIC criterion after running the unpenalized EM algorithm on K spanning from 2 to 8.
+
+Using the last set of simulated counts, I ran a grid search across varying tuning parameters. As done in Pan et al, I fixed $\lambda_1=1$, and searched over $\lambda_2=(0.1,0.2,...,.2)$ and $\tau=(0.1,0.2,...,2)$:
 
 
 <<results=tex, echo=FALSE,results=hide>>=
@@ -175,10 +183,12 @@ max_lambda2<-list_BIC[max_index,2]
 @
 
 
-<<>>=
-print(paste("tau=",unique(max_tau)))
-print(paste("lambda1=",unique(max_lambda1)))
-print(paste("lambda2=",unique(max_lambda2)))
+<<echo=FALSE>>=
+print("lambda1, lambda2, tau, BIC:")
+list_BIC[max_index,]
+@
+
+<<echo=FALSE,results=hide,warnings=TRUE>>=
 if(length(max_index)>1){
   warning("more than one max index")
   max_index<-max_index[1]
@@ -186,19 +196,79 @@ if(length(max_index)>1){
   max_lambda1<-list_BIC[max_index,1]
   max_lambda2<-list_BIC[max_index,2]
 }
-
 @
 
-# Final run based on optimal tuning parameters
+The results of the final run based on optimal tuning parameters are below:
 
-<<>>=
-X_final<-EM(y=y,k=max_k,tau=max_tau,lambda1=max_lambda1,lambda2=max_lambda2,size_factors=size_factors)
-head(X_final$coefs)
-print(X_final$pi)
-print(mean(X_final$nondiscriminatory))
-print(X_final$final_clusters)
+<<results=tex, echo=FALSE,results=hide>>=
+sim=100
+temp_pi<-matrix(rep(0,times=max_k*sim),nrow=sim)
+temp_coefs<-list()
+temp_nondisc<-rep(0,times=sim)
+temp_ARI<-rep(0,times=sim)
+temp_sensitivity<-rep(0,times=sim)
+temp_falsepos<-rep(0,times=sim)
+for(ii in 1:sim){
+  sim.dat<-simulate_data(n=n,k=max_k,g=g,init_pi=init_pi,b=sim_coefs)
+  y<-sim.dat$y+1
+  z<-sim.dat$z
+  true_clusters<-rep(0,times=n)
+  for(i in 1:n){
+    true_clusters[i]<-which(z[,i]==1)
+  }
+  row_names<-paste("gene",seq(g))
+  col_names<-paste("subj",seq(n))
+  cts<-as.matrix(y)
+  rownames(cts)<-row_names
+  colnames(cts)<-col_names
+  coldata<-matrix(paste("cl",true_clusters,sep=""),nrow=n)
+  rownames(coldata)<-colnames(cts)
+  colnames(coldata)<-"cluster"
+  dds<-DESeqDataSetFromMatrix(countData = cts,
+                              colData = coldata,
+                              design = ~ 1)
+  DESeq_dds<-DESeq(dds)
+  size_factors<-estimateSizeFactors(dds)$sizeFactor
+  norm_y<-counts(DESeq_dds,normalized=TRUE)
+  
+  X<-EM(y=y,k=max_k,tau=max_tau,lambda1=max_lambda1,lambda2=max_lambda2,size_factors=size_factors)
+  temp_pi[ii,]<-X$pi
+  temp_coefs[[ii]]<-X$coefs
+  temp_nondisc[ii]<-mean(X$nondiscriminatory)
+  temp_ARI[ii]<-randIndex(true_clusters,X$final_clusters)
+  if(tt>0){
+    temp_sensitivity[ii]<-mean(X$nondiscriminatory[1:tt]==FALSE)
+  } else {temp_sensitivity[ii]<-NA}
+  if(tt<g){
+    temp_falsepos[ii]<-mean(X$nondiscriminatory[(tt+1):g]==FALSE)
+  } else {temp_falsepos[ii]<-NA}
+}
+
+mean_pi<-colSums(temp_pi)/sim
+mean_coefs<-Reduce('+',temp_coefs)/sim
+mean_nondisc<-mean(temp_nondisc)
+mean_ARI<-mean(temp_ARI)
+
+mean_sensitivity<-mean(temp_sensitivity)
+mean_falsepos<-mean(temp_falsepos)
 @
 
-
-
+Below are the summary of results:
+<<echo=FALSE>>=
+print(paste("Mean pi:",mean_pi))
+print("First 3 genes:")
+head(mean_coefs,n=3)
+print("Last 3 genes:")
+tail(mean_coefs,n=3)
+print(paste("Mean % of nondiscriminatory genes:",mean_nondisc))
+print(paste("Mean ARI:",mean_ARI))
+if(is.na(mean_sensitivity)==FALSE){
+  print(paste("Mean sensitivity:",mean_sensitivity))
+} else {print("No initially discriminatory genes")}
+if(is.na(mean_falsepos)==FALSE){
+  print(paste("Mean false positive rate:",mean_falsepos))
+} else {print("No initially nondiscriminatory genes")}
+@
+  \clearpage
+  
 \end{document}
