--- a/Simulations/summary_table.Rnw
+++ b/Simulations/summary_table.Rnw
@@ -7,7 +7,7 @@
 library(xtable)
 library(gdata)
 
-load("C:/Users/David/Desktop/Research/EM/Simulations/real_dat_based_sim results/final_table_nb.out")
+load("/Users/deelim/Documents/Research/Simulations/final_table_nb.out")
 print(xtable(tab,digits=2,table.placement="!h"))
 @
 
